01-cluster/08-Prometheus-Grafana/05-grafana-service-ingress-private.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress-private
  namespace: monitoring
  annotations:    
    # cert-manager.io/cluster-issuer: letsencrypt     
  labels:
    app: grafana-ingress
spec:
  ingressClassName: internal-nginx
  rules:
    - host: grafana-devuat.samsassets.com
      http:
        paths:
          - path: /
            pathType: Prefix          
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
  tls:
  - hosts:
    - grafana-devuat.samsassets.com
    secretName: grafana-rsa-cert-tls
